<resources>
    <string name="app_name">ModdakirApps</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="the_easiest_way_to_learn_the_quran">The Easiest Way to Learn the Quran</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="teacher_notification">Teacher notification</string>
    <string name="teachers_list_female">All teacher</string>
    <string name="favorite_teachers_female">Fav teachers</string>
    <string name="teacher_notification_female">Notify Teachers </string>
    <string name="history">History</string>
    <string name="details">Details</string>
    <string name="invitation">Invitations</string>
    <string name="shareMyLink">share invitation link</string>
    <string name="myCode">Share my URL:</string>
    <string name="RegistrationCount">Registration Count</string>
    <string name="PurchaseCount">Purchase Count</string>
    <string name="charCount">Characters Count</string>
    <string name="login_en_ar" translatable="false"> دخول / Log in </string>
    <string name="sign_up_en_ar" translatable="false">  تسجيل / Sign up</string>
    <string name="purchaced">Purchased</string>
    <string name="registered">Registered</string>
    <string name="empty_invitations">Not statistics found,share  your code with friends to see invitation statistics.</string>
    <string name="unAuthentication">unAuthenticated</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="accept_terms_and_conditions"><u>By creating an account, you agree to our terms and conditions</u></string>
    <string name="each_dependent_minutes">%s minutes will be added to each dependent</string>
    <string name="add_user">Add a beneficiary</string>
    <string name="contactus_via_whatsapp"><u>Contact us </u></string>
    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
    <string name="accounts_settings">Accounts </string>
    <string name="create_account">Create a new account</string>
    <string name="add_existing_account">Add an existing account</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_to_delete_the_account">Are you sure to delete the account?</string>
    <string name="switch_account_message">Do you want to switch to ?</string>
    <string name="delete_account_message">Delete Account</string>
    <string name="auth_title">Finger authentication</string>
    <string name="auth_error">Authentication error</string>
    <string name="select_type">Select type</string>
    <string name="activate"> <u>Activate</u></string>
    <string name="verification_message">Your verification code is sent to %s</string>
    <string name="your_name">Enter your name</string>
    <string name="enter_your_mail">Enter your mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="type_dialog_message">Please choice your account type,we will use it for better teachers selection</string>
    <string name="verify">Verify</string>
    <string name="enter_promo_code">Enter promo code first</string>
    <string name="home_packages_target_title">Current packages</string>
    <string name="home_packages_target_des">Here you will see the remaining minutes in all your current packages</string>
    <string name="home_teachers_target_title_male">Teacher List</string>
    <string name="home_teachers_target_des_male">You can search for your preferred teacher</string>
    <string name="home_teachers_target_title_female">Teacher List</string>
    <string name="home_teachers_target_des_female">You can search for your preferred teacher</string>
    <string name="home_direct_Call_target_title">Direct Call</string>
    <string name="home_direct_call_target_des_male">You can call the best available teacher directly with one click</string>
    <string name="home_direct_call_target_des_female">You can call the best available teacher directly with one click</string>
    <string name="home_buy_package_target_title">Subscribe To A New Package</string>
    <string name="home_buy_package_target_des">Ran out of minutes?\nDon\'t worry, subscribe to a new package anytime from here</string>
    <string name="teachers_layout_target_title_male">Call A Teacher</string>
    <string name="teachers_layout_target_title_female">Call A Teacher</string>
    <string name="teachers_layout_target_des_male">You can call any teacher (Audio or Video) while he is available</string>
    <string name="teachers_layout_target_des_female">You can call any teacher (Audio or Video) while she is available</string>
    <string name="googleLoginAction">Press to sign in with your Google account</string>
    <string name="facebookLoginAction">Press to sign in with your Facebook account</string>
    <string name="openLoginAction">Press to open the sign in screen</string>
    <string name="nextAction">Press to go to the next screen</string>
    <string name="by_using">Using</string>
    <string name="or">Or</string>
    <string name="already_have_account1">Already have an account?</string>
    <string name="cancel">Cancel</string>
    <string name="log_in">Login</string>
    <string name="create_new_account"><u>Create a new account</u></string>
    <string name="mobile_number">Mobile number</string>
    <string name="type">Type</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="send">Send</string>
    <string name="type_required">Please Select Type</string>
    <string name="continue_">Continue</string>
    <string name="login_with_mobile_number">Login with mobile number</string>
</resources>