<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.moddakir.moddakir.view.widget.TextViewLateefRegOT
        android:id="@+id/gendertext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/type"
        android:textColor="@color/colorGray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/type_rg"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gendertext">

        <RadioButton
            android:id="@+id/male_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/male"
            android:textSize="14sp"
            android:padding="@dimen/_3sdp"
            android:drawableStart="@drawable/ic_male"
            android:drawablePadding="@dimen/_6sdp"
            android:theme="@style/CustomEditTextTheme" />

        <RadioButton
            android:id="@+id/female_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/female"
            android:textSize="14sp"
            android:padding="@dimen/_3sdp"
            android:drawableStart="@drawable/ic_female"
            android:drawablePadding="@dimen/_6sdp"
            android:theme="@style/CustomEditTextTheme" />

        <RadioButton
            android:visibility="invisible"
            android:id="@+id/boy_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/boy"
            android:textSize="14sp"
            android:theme="@style/CustomEditTextTheme" />

        <RadioButton
            android:visibility="invisible"
            android:id="@+id/girl_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/girl"
            android:textSize="14sp"
            android:theme="@style/CustomEditTextTheme" />

    </RadioGroup>

    <com.moddakir.moddakir.view.widget.TextViewUniqueLight
        android:id="@+id/type_error_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="@+id/gendertext"
        app:layout_constraintStart_toStartOf="@+id/gendertext"
        app:layout_constraintTop_toBottomOf="@id/type_rg"
        tools:text="@string/type_required" />
</androidx.constraintlayout.widget.ConstraintLayout>