<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.moddakir.moddakir.ui.widget.TextViewUniqueLight
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/type"
            android:textAlignment="center"

            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.moddakir.moddakir.ui.widget.TextViewUniqueLight
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/type_dialog_message"
            android:textAlignment="center"

            android:textColor="@color/colorDarkGray"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <RadioGroup
            android:id="@+id/type_rg"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message">

            <RadioButton
                android:id="@+id/male_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/male"
                android:textSize="14sp"

                android:theme="@style/CustomEditTextTheme" />

            <RadioButton
                android:id="@+id/female_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/female"
                android:textSize="14sp"
                android:theme="@style/CustomEditTextTheme" />

            <RadioButton
                android:id="@+id/boy_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
android:visibility="invisible"
                android:text="@string/boy"
                android:textSize="14sp"
                android:theme="@style/CustomEditTextTheme" />

            <RadioButton
                android:id="@+id/girl_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/girl"
                android:visibility="invisible"
                android:textSize="14sp"
                android:theme="@style/CustomEditTextTheme" />

        </RadioGroup>

        <com.moddakir.moddakir.ui.widget.TextViewUniqueLight
            android:id="@+id/type_error_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintEnd_toEndOf="@+id/message"
            app:layout_constraintStart_toStartOf="@+id/message"
            app:layout_constraintTop_toBottomOf="@id/type_rg"
            tools:text="@string/type_required" />



        <include
            android:id="@+id/linear"
            layout="@layout/country_code_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="bottom"
            app:layout_constraintEnd_toEndOf="@+id/type_error_tv"
            app:layout_constraintStart_toStartOf="@+id/type_error_tv"
            app:layout_constraintTop_toBottomOf="@+id/type_error_tv"
            />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/darker_gray"
            android:theme="@style/CustomEditTextTheme"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear"
           >


            <com.moddakir.moddakir.ui.widget.EditTextUniqueLight
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_mail"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.moddakir.moddakir.ui.widget.ButtonUniqueLight
            android:id="@+id/cancel_but"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/red_button_background"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_til" />

        <com.moddakir.moddakir.ui.widget.ButtonUniqueLight
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@drawable/custom_turquoise_solid"
            android:gravity="center"
            android:text="@string/continue_"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/cancel_but"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_but"
            app:layout_constraintTop_toTopOf="@id/cancel_but" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
